--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "dev": "npm-run-all --parallel start playground"
   },
   "dependencies": {
-    "graphql-yoga": "1.12.1",
-    "prisma-binding": "^1.5.18"
+    "graphql-yoga": "^1.16.7",
+    "prisma-binding": "^2.2.8"
   },
   "devDependencies": {
-    "dotenv": "^5.0.1",
-    "graphql-cli": "2.15.13",
-    "nodemon": "^1.17.3",
-    "npm-run-all": "4.1.2",
-    "prisma": "1.7.3"
+    "dotenv": "^6.2.0",
+    "graphql-cli": "^2.17.0",
+    "nodemon": "^1.18.7",
+    "npm-run-all": "^4.1.5",
+    "prisma": "^1.22.2"
   },
   "private": true
 }
